// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> spec renders the component 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <label
      class="label "
      for="hds-select-1-toggle-button"
      id="hds-select-1-label"
    >
      Select
    </label>
    <div
      class="wrapper"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="hds-select-1-label hds-select-1-toggle-button"
        aria-owns="hds-select-1-menu"
        class="button placeholder"
        id="hds-select-1-toggle-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          aria-label="angle-down"
          class="icon small angleIcon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 13.5L17 8.5L18.5 10L12 16.5L5.5 10L7 8.5L12 13.5Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <ul
        aria-labelledby="hds-select-1-label"
        class="menu"
        id="hds-select-1-menu"
        role="listbox"
        style="max-height: 260px;"
        tabindex="-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> spec renders the component without label when aria-labelledby is given 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="wrapper"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="hds-select-4-label some-external-label-id hds-select-4-toggle-button"
        aria-owns="hds-select-4-menu"
        class="button placeholder"
        id="hds-select-4-toggle-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          aria-label="angle-down"
          class="icon small angleIcon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 13.5L17 8.5L18.5 10L12 16.5L5.5 10L7 8.5L12 13.5Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <ul
        aria-labelledby="hds-select-4-label"
        class="menu"
        id="hds-select-4-menu"
        role="listbox"
        style="max-height: 260px;"
        tabindex="-1"
      />
    </div>
  </div>
</DocumentFragment>
`;
